# worktimer

./: .gitignore  CMakeLists.txt  README.md
db/: worktimer.db
images/: worktimer.icns
lib/: CMakeLists.txt
lib/SQLite/: CMakeLists.txt
src/: CMakeLists.txt  Command.cpp  Command.h  CommandParser.cpp  CommandParser.h  Database.cpp  Database.h  Database_Category.cpp  Database_Category.h  Dump.cpp  Dump.h  Exception.cpp  Exception.h  LogDataDTO.h  Logger.h  StateMachine.cpp  StateMachine.h  StaticData.h  main.cpp  resource.rc
src/Dialogs/: DetailList.cpp  DetailList.h  MainWindow.cpp  MainWindow.h  PreferencesPanel_Category.cpp  PreferencesPanel_Category.h
src/Dialogs/Views/: DetailListView.cpp  DetailListView.h  MainWindowView.cpp  MainWindowView.h  PreferencesPanel_Category.cpp  PreferencesPanel_Category.h
src/States/: Error.cpp  Error.h  Running.cpp  Running.h  Start.cpp  Start.h  State_Interface.h  Stop.cpp  Stop.h
test/: CMakeLists.txt
